--- a/deploy/deployment/openshift/objects/che-operator.Deployment.yaml
+++ b/deploy/deployment/openshift/objects/che-operator.Deployment.yaml
@@ -99,7 +99,7 @@ spec:
           value: "1"
         - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
           value: "false"
-        image: quay.io/eclipse/che-operator:next
+        image: quay.io/abazko/operator:21577
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 10
