feat: ensure pod security standard
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -76,7 +76,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.52.0-627.next
+  name: eclipse-che-preview-openshift.v7.52.0-630.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1180,6 +1180,8 @@ spec:
                       privileged: false
                       readOnlyRootFilesystem: false
                       runAsNonRoot: true
+                      seccompProfile:
+                        type: RuntimeDefault
                     volumeMounts:
                       - mountPath: /tmp/k8s-webhook-server/serving-certs
                         name: webhook-tls-certs
@@ -1390,7 +1392,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.52.0-627.next
+  version: 7.52.0-630.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
