--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -125,7 +125,11 @@ spec:
             timeoutSeconds: 5
           securityContext:
             privileged: false
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
             readOnlyRootFilesystem: false
+            seccompProfile:
+              type: RuntimeDefault
             capabilities:
               drop:
                 - ALL
