--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -76,7 +76,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.52.0-630.next
+  name: eclipse-che-preview-openshift.v7.52.0-632.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1190,6 +1190,9 @@ spec:
                 hostNetwork: false
                 hostPID: false
                 restartPolicy: Always
+                securityContext:
+                  fsGroup: 1724
+                  runAsUser: 1724
                 serviceAccountName: che-operator
                 terminationGracePeriodSeconds: 20
                 volumes:
@@ -1392,7 +1395,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.52.0-630.next
+  version: 7.52.0-632.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
