--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -4668,6 +4668,9 @@ spec:
       hostNetwork: false
       hostPID: false
       restartPolicy: Always
+      securityContext:
+        fsGroup: 1724
+        runAsUser: 1724
       serviceAccountName: che-operator
       terminationGracePeriodSeconds: 20
       volumes:
