--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -4670,6 +4670,9 @@ spec:
       hostNetwork: false
       hostPID: false
       restartPolicy: Always
+      securityContext:
+        fsGroup: 1724
+        runAsUser: 1724
       serviceAccountName: che-operator
       terminationGracePeriodSeconds: 20
       volumes:
