chore: declare pod securityContext explicitly (#1458)
* feat: ensure pod security standard

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -125,6 +125,8 @@ spec:
             timeoutSeconds: 5
           securityContext:
             privileged: false
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
             readOnlyRootFilesystem: false
             capabilities:
               drop:
