--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1143,54 +1143,67 @@ spec:
                     Git repositories.
                   properties:
                     bitbucket:
+                      description: Enables users to work with repositories hosted
+                        on Bitbucket (bitbucket.org or self-hosted).
                       items:
+                        description: BitBucketService enables users to work with repositories
+                          hosted on Bitbucket (bitbucket.org or self-hosted).
                         properties:
                           endpoint:
                             default: https://bitbucket.org
-                            description: BitBucket server endpoint URL.
+                            description: Bitbucket server endpoint URL.
                             type: string
                           secretName:
                             description: 'Kubernetes secret, that contains Base64-encoded
-                              BitBucket OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0:
-                              private key, BitBucket Application link consumer key
-                              and BitBucket Application link shared secret must be
+                              Bitbucket OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0:
+                              private key, Bitbucket Application link consumer key
+                              and Bitbucket Application link shared secret must be
                               stored in `private.key`, `consumer.key` and `shared_secret`
                               keys of the Kubernetes secret respectively. For OAuth
-                              2.0: BitBucket OAuth consumer key and BitBucket OAuth
+                              2.0: Bitbucket OAuth consumer key and Bitbucket OAuth
                               consumer secret must be stored in `id` and `secret`
-                              keys of the Kubernetes secret respectively.'
+                              keys of the Kubernetes secret respectively. See the
+                              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-bitbucket/.'
                             type: string
                         required:
                           - secretName
                         type: object
                       type: array
                     github:
+                      description: Enables users to work with repositories hosted
+                        on GitHub (github.com or GitHub Enterprise).
                       items:
-                        description: GitHubService enables users to work with a remote
-                          Git repository that is hosted on GitHub.
+                        description: GitHubService enables users to work with repositories
+                          hosted on GitHub (GitHub.com or GitHub Enterprise).
                         properties:
                           secretName:
-                            description: Kubernetes secret, that contains Base64-encoded
+                            description: 'Kubernetes secret, that contains Base64-encoded
                               GitHub OAuth Client id and GitHub OAuth Client secret
                               data. The GitHub OAuth data must be stored in the Kubernetes
-                              secret in `id` and `secret` keys respectively.
+                              secret in `id` and `secret` keys respectively. See the
+                              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                             type: string
                         required:
                           - secretName
                         type: object
                       type: array
                     gitlab:
+                      description: Enables users to work with repositories hosted
+                        on GitLab (gitlab.com or self-hosted).
                       items:
+                        description: GitLabService enables users to work with repositories
+                          hosted on GitLab (gitlab.com or self-hosted).
                         properties:
                           endpoint:
                             default: https://gitlab.com
                             description: GitLab server endpoint URL.
                             type: string
                           secretName:
-                            description: Kubernetes secret, that contains Base64-encoded
-                              GitHub Application id and GitHub Application Client
-                              secret data. The GitHub Application data must be stored
+                            description: 'Kubernetes secret, that contains Base64-encoded
+                              GitHub Application id and GitLab Application Client
+                              secret data. The GitLab Application data must be stored
                               in `id` and `secret` keys of the Kubernetes secret respectively.
+                              See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                             type: string
                         required:
                           - endpoint
