Update dev resources
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1321,7 +1321,7 @@ spec:
                       description: 'Log level for the Che server: `INFO` or `DEBUG`.
                         Defaults to `INFO`.'
                       type: string
-                    cheServerEnvenv:
+                    cheServerEnv:
                       description: List of environment variables to set in the Che
                         server container.
                       items:
