--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1279,7 +1279,7 @@ spec:
                     description: 'Log level for the Che server: `INFO` or `DEBUG`.
                       Defaults to `INFO`.'
                     type: string
-                  cheServerEnvenv:
+                  cheServerEnv:
                     description: List of environment variables to set in the Che server
                       container.
                     items:
