--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -871,7 +871,7 @@ spec:
                   cheLogLevel:
                     description: 'Log level for the Che server: `INFO` or `DEBUG`. Defaults to `INFO`.'
                     type: string
-                  cheServerEnvenv:
+                  cheServerEnv:
                     description: List of environment variables to set in the Che server container.
                     items:
                       description: EnvVar represents an environment variable present in a Container.
