--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -4344,7 +4344,7 @@ spec:
                           show:
                             description: Instructs dashboard to show the message.
                             type: boolean
-                          warning:
+                          text:
                             description: Warning message displayed on the user dashboard.
                             type: string
                         type: object
