--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -2907,7 +2907,7 @@ spec:
                           show:
                             description: Instructs dashboard to show the message.
                             type: boolean
-                          warning:
+                          text:
                             description: Warning message displayed on the user dashboard.
                             type: string
                         type: object
