--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -2912,7 +2912,7 @@ spec:
                           show:
                             description: Instructs dashboard to show the message.
                             type: boolean
-                          warning:
+                          text:
                             description: Warning message displayed on the user dashboard.
                             type: string
                         type: object
