--- a/.github/workflows/minikube-test-upgrade-stable-to-stable.yaml
+++ b/.github/workflows/minikube-test-upgrade-stable-to-stable.yaml
@@ -26,14 +26,12 @@ jobs:
       uses: che-incubator/setup-minikube-action@next
       with:
         minikube-version: v1.23.2
-    - name: Enable Private registry
-      run: /bin/bash olm/minikube-registry-addon.sh &
     - name: Install yq
       run: sudo pip install yq
     - name: Install chectl
       run: bash <(curl -sL https://www.eclipse.org/che/chectl/) --channel=next
     - name: Run tests
-      run: /bin/bash .github/bin/minikube/test-upgrade-from-stable-to-stable.sh
+      run: /bin/bash build/scripts/minikube-tests/test-upgrade-from-stable-to-stable.sh
       env:
         "GITHUB_TOKEN": "${{ secrets.GITHUB_TOKEN }}"
     - uses: actions/upload-artifact@v2
