--- a/.github/workflows/resources-check-main.yml
+++ b/.github/workflows/resources-check-main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Validate operator resources
       run: |
         go install golang.org/x/tools/cmd/goimports@latest
-        ${GITHUB_WORKSPACE}/.github/bin/check-resources.sh
+        ${GITHUB_WORKSPACE}/build/scripts/check-resources.sh
   bundle-version-validation:
     runs-on: ubuntu-20.04
     steps:
@@ -43,4 +43,4 @@ jobs:
       with:
         go-version: 1.16
     - name: Validate OLM bundle version
-      run: ${GITHUB_WORKSPACE}/.github/bin/check-bundle-version.sh
+      run: ${GITHUB_WORKSPACE}/build/scripts/check-bundle-version.sh
