--- a/config/manifests/bases/che-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/che-operator.clusterserviceversion.yaml
@@ -117,6 +117,11 @@ spec:
         path: message
         x-descriptors:
         - urn:alm:descriptor:text
+      - description: Open VSX registry URL.
+        displayName: OpenVSX URL
+        path: openVSXURL
+        x-descriptors:
+        - urn:alm:descriptor:org.w3:link
       - description: The public URL of the internal plug-in registry.
         displayName: Plugin registry URL
         path: pluginRegistryURL
@@ -311,6 +316,11 @@ spec:
         path: openShiftOAuthUserCredentialsSecret
         x-descriptors:
         - urn:alm:descriptor:text
+      - description: Open VSX registry URL.
+        displayName: OpenVSX URL
+        path: openVSXURL
+        x-descriptors:
+        - urn:alm:descriptor:org.w3:link
       - description: Public URL to the plugin registry.
         displayName: Plugin registry URL
         path: pluginRegistryURL
