--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -76,7 +76,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.52.0-647.next
+  name: eclipse-che-preview-openshift.v7.53.0-648.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -168,6 +168,11 @@ spec:
             path: message
             x-descriptors:
               - urn:alm:descriptor:text
+          - description: Open VSX registry URL.
+            displayName: OpenVSX URL
+            path: openVSXURL
+            x-descriptors:
+              - urn:alm:descriptor:org.w3:link
           - description: The public URL of the internal plug-in registry.
             displayName: Plugin registry URL
             path: pluginRegistryURL
@@ -362,6 +367,11 @@ spec:
             path: openShiftOAuthUserCredentialsSecret
             x-descriptors:
               - urn:alm:descriptor:text
+          - description: Open VSX registry URL.
+            displayName: OpenVSX URL
+            path: openVSXURL
+            x-descriptors:
+              - urn:alm:descriptor:org.w3:link
           - description: Public URL to the plugin registry.
             displayName: Plugin registry URL
             path: pluginRegistryURL
@@ -1389,7 +1399,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.52.0-647.next
+  version: 7.53.0-648.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
