--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -3783,6 +3783,9 @@ spec:
                 description: Indicates whether an Identity Provider instance, Keycloak
                   or RH-SSO, has been configured to integrate with the OpenShift OAuth.
                 type: boolean
+              openVSXURL:
+                description: Open VSX registry URL.
+                type: string
               pluginRegistryURL:
                 description: Public URL to the plugin registry.
                 type: string
@@ -7321,6 +7324,9 @@ spec:
               message:
                 description: A human readable message indicating details about why
                   the Che deployment is in the current phase.
+                type: string
+              openVSXURL:
+                description: Open VSX registry URL.
                 type: string
               pluginRegistryURL:
                 description: The public URL of the internal plug-in registry.
