--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -2503,6 +2503,9 @@ spec:
               openShiftoAuthProvisioned:
                 description: Indicates whether an Identity Provider instance, Keycloak or RH-SSO, has been configured to integrate with the OpenShift OAuth.
                 type: boolean
+              openVSXURL:
+                description: Open VSX registry URL.
+                type: string
               pluginRegistryURL:
                 description: Public URL to the plugin registry.
                 type: string
@@ -4970,6 +4973,9 @@ spec:
                 type: string
               message:
                 description: A human readable message indicating details about why the Che deployment is in the current phase.
+                type: string
+              openVSXURL:
+                description: Open VSX registry URL.
                 type: string
               pluginRegistryURL:
                 description: The public URL of the internal plug-in registry.
