--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -1444,6 +1444,10 @@ spec:
                     description: Deprecated in favor of `disableInternalClusterSVCNames`.
                     type: boolean
                   workspaceDefaultComponents:
+                    default:
+                    - container:
+                        image: quay.io/devfile/universal-developer-image:ubi8-latest
+                      name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These default components are meant to be used when a Devfile does not contain any components.
                     items:
                       properties:
@@ -2363,6 +2367,7 @@ spec:
                       type: object
                     type: array
                   workspaceDefaultEditor:
+                    default: che-incubator/che-code/insiders
                     description: The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`. The URI must start from `http`.
                     type: string
                   workspaceNamespaceDefault:
@@ -3684,6 +3689,11 @@ spec:
                 type: object
               devEnvironments:
                 default:
+                  defaultComponents:
+                  - container:
+                      image: quay.io/devfile/universal-developer-image:ubi8-latest
+                    name: universal-developer-image
+                  defaultEditor: che-incubator/che-code/insiders
                   defaultNamespace:
                     template: <username>-che
                   secondsOfInactivityBeforeIdling: 1800
@@ -3693,6 +3703,10 @@ spec:
                 description: Development environment default configuration options.
                 properties:
                   defaultComponents:
+                    default:
+                    - container:
+                        image: quay.io/devfile/universal-developer-image:ubi8-latest
+                      name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These default components are meant to be used when a Devfile, that does not contain any components.
                     items:
                       properties:
@@ -4612,6 +4626,7 @@ spec:
                       type: object
                     type: array
                   defaultEditor:
+                    default: che-incubator/che-code/insiders
                     description: The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version` format. The URI must start from `http://` or `https://`.
                     type: string
                   defaultNamespace:
